hphp/hack/test/typecheck/inout/bad_inout_use_arg9.php.like_types.exp
File "bad_inout_use_arg9.php", line 10, characters 5-18:
You cannot decorate this argument as inout (Parsing[1002])
File "bad_inout_use_arg9.php", line 10, characters 11-19:
Arguments for inout parameters must be local variables or simple subscript expressions on vecs, dicts, keysets, or arrays (NastCheck[3050])
File "bad_inout_use_arg9.php", line 10, characters 11-19:
Expected argument marked inout to be contained in a local or a value-typed container (e.g. vec, dict, keyset, array). To use inout here, assign to/from a temporary local variable. (Typing[4208])
File "bad_inout_use_arg9.php", line 6, characters 17-33:
This is a dynamic value or an object of type dict<int, string> because it is an unenforceable type
